// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MsModal 组件 demo 测试 正确渲染 MsModal basic.tsx 1`] = `
<div>
  <button
    class="ant-btn ant-btn-default"
    type="button"
  >
    <span>
      打 开
    </span>
  </button>
</div>
`;

exports[`MsModal 组件 demo 测试 正确渲染 MsModal button.tsx 1`] = `
<div>
  <button
    class="ant-btn ant-btn-default"
    type="button"
  >
    <span>
      自定义Button属性
    </span>
  </button>
</div>
`;

exports[`MsModal 组件 demo 测试 正确渲染 MsModal dual.tsx 1`] = `
<div>
  <button
    class="ant-btn ant-btn-default"
    type="button"
  >
    <span>
      打 开
    </span>
  </button>
</div>
`;

exports[`MsModal 组件 demo 测试 正确渲染 MsModal footer.tsx 1`] = `
<div>
  <button
    class="ant-btn ant-btn-default"
    type="button"
  >
    <span>
      重写footer
    </span>
  </button>
</div>
`;

exports[`MsModal 组件 demo 测试 正确渲染 MsModal handler.tsx 1`] = `
<div>
  <div
    class="ant-space ant-space-horizontal ant-space-align-center"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          普通弹窗
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          改过组件层级弹窗
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`MsModal 组件 demo 测试 正确渲染 MsModal info.tsx 1`] = `
<div>
  <div
    class="ant-space ant-space-horizontal ant-space-align-center"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          Info
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          Success
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          Warning
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          Error
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`MsModal 组件 demo 测试 正确渲染 MsModal loading.tsx 1`] = `
<div>
  <button
    class="ant-btn ant-btn-default"
    type="button"
  >
    <span>
      打 开
    </span>
  </button>
</div>
`;

exports[`MsModal 组件 demo 测试 正确渲染 MsModal promise.tsx 1`] = `
<div>
  <div
    class="ant-space ant-space-horizontal ant-space-align-center"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          Resolve成功
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          Reject失败
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`MsModal 组件 demo 测试 正确渲染 MsModal self.tsx 1`] = `
<div>
  <button
    class="ant-btn ant-btn-default"
    type="button"
  >
    <span>
      打 开
    </span>
  </button>
</div>
`;

exports[`MsModal 组件 demo 测试 正确渲染 MsModal size.tsx 1`] = `
<div>
  <div
    class="ant-space ant-space-horizontal ant-space-align-center"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          small(500px)
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          middle(700px)
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          large(900px)
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          width=999px
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`MsModal 组件 demo 测试 正确渲染 MsModal switch.tsx 1`] = `
<div>
  <button
    class="ant-btn ant-btn-default"
    type="button"
  >
    <span>
      打 开
    </span>
  </button>
</div>
`;
